syntax = "proto3";

package user.v1;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string user_id = 1; // ユーザーID
}

message GetUserResponse {
  string user_id = 1; // ユーザーID
  string name = 2; // フルネーム
  string email = 3; // メールアドレス
  string given_name = 4; // 名 (first name)
  string family_name = 5; // 姓 (last name)
  string middle_name = 6; // ミドルネーム
  string nickname = 7; // ニックネーム
  string profile = 8; // プロフィールページのURL
  string picture = 9; // プロフィール画像のURL
  string website = 10; // ウェブサイトURL
  string phone = 11; // 電話番号
  string gender = 12; // 性別 (例：male、female、otherなど)
  string birthdate = 13; // 生年月日 (YYYY-MM-DD形式)
  string zoneinfo = 14; // タイムゾーン (例：Europe/Paris)
  string locale = 15; // 言語/地域設定 (例：en-US)
}
